重构应用以支持PostgreSQL，添加活动管理功能，更新数据库模式，优化表单处理和界面

--- a/render.yaml
+++ b/render.yaml
@@ -7,4 +7,17 @@ services:
     envVars:
       - key: FLASK_ENV
         value: production
+      - key: POSTGRES_DB
+        value: shuttlebus
+      - key: POSTGRES_USER
+        value: postgres
+      - key: POSTGRES_PASSWORD
+        value: postgres
+      - key: POSTGRES_HOST
+        value: shuttle-bus-db
+      - key: POSTGRES_PORT
+        value: "5432"
+    plan: free
+  - type: postgres
+    name: shuttle-bus-db
     plan: free
